# scan-print-pipeline

./: .env.example  .env.printer  .gitignore  Dockerfile  License  README.md  appmap.yml  audio-to-pdf.js  docker-compose.yml  index.js  next.config.js  package-lock.json  package.json  pineconeUploader.js  pyproject.toml  result.txt  server.js
.next/: trace
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: webpack.js
.next/static/chunks/pages/: _app.js  index.js
.next/static/webpack/: webpack.f0458b23b83ee00e.hot-update.js
components/: Footer.jsx  Header.jsx  Metadata.jsx
experimental/: photoedit.py  photogenerate.py
lib/: FormDataHandler.js  utils.js
pages/: _app.js  index.js  index.module.css  print.js  record.js
pages/api/: gcloudUpload.js  glcoudUpload.js  print.js  supabaseFetch.js  supabaseUpsert.js  transcribe.js  whisper.js
pages/components/: animatedBars.js  animatedBars.module.css  arrow.js  dialog.js  dialog.module.css  iconbutton.js  iconbutton.module.css  message.js  message.module.css  microphone.js  microphoneOff.js  pause.js  play.js  progress.js  progress.module.css  settings.js
pages/lib/: upload.js  useStorage.js  utils.js
public/: manifest.json
public/uploads/: tmp-file1689633995311.m4a
scripts/: createPdf.js  supabaseUpsert.js
styles/: Header.module.css  Home.module.css  Print.module.css  Record.module.css  app.css  globals.css
